--- a/survey-backend/src/main/resources/application.properties
+++ b/survey-backend/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://database645.ct36od26bg7t.us-east-1.rds.amazonaws.com:3306/database645
+spring.datasource.username=homework645
+spring.datasource.password=homework645
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
